--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,7 +15,7 @@ jobs:
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
     
     - name: Print version
-      run: echo ${{ steps.cache.get_version.VERSION }}
+      run: echo ${GITHUB_REF/refs\/tags\//}
 
     - name: ls
       run: ls
