--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,6 +1,6 @@
 name: docs
 
-on: [create, push, release]
+on: [push]
 
 jobs:
   docs:
@@ -15,7 +15,7 @@ jobs:
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
     
     - name: Print version
-      run: echo ${GITHUB_REF/refs\/tags\//}
+      run: echo ${${GITHUB_REF/refs\/heads\//}/refs\/tags\//}
 
     - name: ls
       run: ls
