--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: Add index.html
       run: |
-        cat target/doc/index.html "
+        echo "
           <!DOCTYPE html>
           <html lang="en">
           <head>
@@ -53,7 +53,7 @@ jobs:
             
           </body>
           </html>
-        "
+        " >> target/doc/index.html
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v1
