--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: Add index.html
       run: |
-        echo "
+        cat >target/doc/index.html <<EOL
           <!DOCTYPE html>
           <html lang="en">
           <head>
@@ -53,7 +53,7 @@ jobs:
             
           </body>
           </html>
-        " >> target/doc/index.html
+        EOL
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v1
