--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -79,7 +79,7 @@ jobs:
         cp -r target/doc/* website/reference/${{ env.CRATE_NAME }}/$TAGORBRANCH
       
     - name: Copy files to website latest
-      if: contains(github.sha, "tags")
+      if: contains(github.sha, 'tags')
       run: |
         rm -rf website/reference/${{ env.CRATE_NAME }}/latest
         mkdir -p website/reference/${{ env.CRATE_NAME }}/latest
