--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -50,18 +50,10 @@ jobs:
     - name: Add index.html
       run: |
         cat >target/doc/index.html <<EOL
-          <!DOCTYPE html>
-          <html lang="en">
-          <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>finch-gen</title>
-            <meta http-equiv="refresh" content="0; URL='${{ env.CRATE_UNDERSCORE }}'" />
-          </head>
-          <body>
-            
-          </body>
-          </html>
+          ---
+          layout: redirect
+          destination: ${{ env.CRATE_UNDERSCORE }}
+          ---
         EOL
 
     - name: Checkout website
