--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = []
+async = ["tokio", "finch-macro/async"]
+
 [dependencies]
 finch-macro = { path = "./macro" }
+tokio = { version = "0.2", optional = true }
