--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -7,7 +7,16 @@ edition = "2018"
 [lib]
 proc-macro = true
 
+[features]
+default = []
+async = []
+
 [dependencies]
 proc-macro2 = "1.0"
 quote = "1.0"
 syn = { version = "1", features = ["extra-traits", "derive", "parsing", "printing", "clone-impls", "proc-macro", "full"] }
+lazy_static = "1.4.0"
+
+[build-dependencies]
+rustversion = "1.0"
+
