--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -16,6 +16,11 @@ proc-macro2 = "1.0"
 quote = "1.0"
 syn = { version = "1", features = ["extra-traits", "derive", "parsing", "printing", "clone-impls", "proc-macro", "full"] }
 lazy_static = "1.4.0"
+rand = "0.7"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+bincode = "1.2"
+
 
 [build-dependencies]
 rustversion = "1.0"
